[package]
name = "wopt"
version = "0.2.9"
edition = "2024"
license = "MIT"
repository = "https://github.com/splurf/wopt"
description = "A procedural macro that automatically generates an Option-wrapped version of a struct, reducing boilerplate for optional updates."
keywords = ["proc-macro", "derive", "option", "struct", "automation"]
categories = ["rust-patterns", "data-structures"]
exclude = [".github/", ".gitignore", "LICENSE", "tests/"]

[lib]
proc-macro = true

[dependencies]
bf2s = { version = "0.1.0", optional = true }
convert_case = "0.8.0"
enum-unit = { version = "0.2.3", features = ["bitflags"], optional = true }
enum-unit-core = { version = "0.1.1", optional = true }
quote = "1.0.40"
rkyv = { version = "0.8.10", features = ["unaligned"], optional = true }
syn = { version = "2.0.101", features = ["derive", "parsing", "proc-macro"] }

[dev-dependencies]
bitflags = "2.9.1"
bytemuck = "1.23.0"

[features]
bf = ["dep:bf2s"]
rkyv = ["dep:enum-unit", "dep:enum-unit-core", "dep:rkyv"]
unchecked = []

[profile.release]
lto = true
codegen-units = 1
