[package]
name = "wopt"
version = "0.4.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/eschwart/wopt"
description = "A procedural macro that automatically generates an Option-wrapped version of a struct, reducing boilerplate for optional updates."
keywords = ["proc-macro", "derive", "option", "struct", "automation"]
categories = ["rust-patterns", "data-structures"]
exclude = [".github/", ".gitignore", "LICENSE", "tests/"]

[lib]
proc-macro = true

[features]
bf = ["dep:bf2s"]
bytemuck = ["dep:enum-unit", "dep:enum-unit-core"]
unchecked = []

[dependencies]
bf2s = { version = "0.1.1", optional = true }
convert_case = "0.8.0"
enum-unit = { version = "0.2.5", features = ["bitflags"], optional = true }
enum-unit-core = { version = "0.1.2", optional = true }
quote = "1.0.40"
syn = { version = "2.0.104", features = ["derive", "parsing", "proc-macro"] }

[dev-dependencies]
bitflags = "2.9.1"
bytemuck = "1.23.1"

[profile.release]
lto = true
codegen-units = 1
